[package]
name = "pacquery"
version = "0.1.0"
authors = ["Jelle van der Waa <jelle@archlinux.org>"]
edition = "2021"
description = "A CLI tool to provide JSON of provided pacman package(s)."
documentation = "https://github.com/jelly/pacquery"
readme = "README.md"
license-file = "LICENSE"
keywords = ["archlinux", "json", "alpm"]
categories = ["command-line-utilities"]
publish = false
default-run = "pacquery"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "2.2.3"
anyhow = "1.0.78"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
thiserror = "1.0.53"
