[package]
name = "pacquery"
version = "0.1.0"
authors = ["Jelle van der Waa <jelle@archlinux.org>"]
edition = "2021"
description = "A CLI tool to provide JSON of provided pacman package(s)."
documentation = "https://github.com/jelly/pacquery"
readme = "README.md"
license-file = "LICENSE"
keywords = ["archlinux", "json", "alpm"]
categories = ["command-line-utilities"]
publish = false
default-run = "pacquery"

[[bin]]
name = "pacquery-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "pacquery-mangen"
path = "src/bin/mangen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "5.0"
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"

[dev-dependencies]
rstest = "0.22.0"
tar = "0.4.44"
tempfile = "3.26.0"
